# Hopsworks_featurestore

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: customer_info.csv  demography.csv  subscriptions.csv
data/scripts/: process_data.py
eda/: churn_eda.py
feature_store/: init_hopsworks.py
features/: feature_engineering.py
featurestore/: __init__.py  customer_demography_info.py  customer_info.py  customer_subscription_info.py  init_hopsworks.py
featureview/: churn_feature_view.py
